comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi, illum voluptas eos eius maiores at qui temporibus, cum rem, obcaecati porro odio consequatur. Aliquid vero quos ipsa nemo soluta?</p>
         </article>
+        
         <article>
-            <h2>Artigo 002</h2>
-            <p>Txto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloremque omnis! Vitae molestias nihil pariatur a repellendus sed iste fugiat vel aliquid officiis. Harum cum quae, ad incidunt id ducimus?</p>
         </article>
     </main>
 </body>
